# mulit-constrained-qaoa-data

./: README.md  pyproject.toml
instances/multi_knapsack/: overview.csv  scenario_0.lp  scenario_1.lp  scenario_10.lp  scenario_11.lp  scenario_12.lp  scenario_13.lp  scenario_14.lp  scenario_15.lp  scenario_16.lp  scenario_17.lp  scenario_18.lp  scenario_19.lp  scenario_2.lp  scenario_3.lp  scenario_4.lp  scenario_5.lp  scenario_6.lp  scenario_7.lp  scenario_8.lp  scenario_9.lp
instances/prosumer_problem/: Comb0_0_decreasing.lp  Comb0_0_down_quadratic.lp  Comb0_0_increasing.lp  Comb0_0_up_quadratic.lp  Comb0_2_decreasing.lp  Comb0_2_down_quadratic.lp  Comb0_2_increasing.lp  Comb0_2_up_quadratic.lp  Comb10_0_decreasing.lp  Comb10_0_down_quadratic.lp  Comb10_0_increasing.lp  Comb10_0_up_quadratic.lp  Comb10_2_decreasing.lp  Comb10_2_down_quadratic.lp  Comb10_2_increasing.lp  Comb10_2_up_quadratic.lp  Comb11_0_decreasing.lp  Comb11_0_down_quadratic.lp  Comb11_0_increasing.lp  Comb11_0_up_quadratic.lp  Comb11_2_decreasing.lp  Comb11_2_down_quadratic.lp  Comb11_2_increasing.lp  Comb11_2_up_quadratic.lp  Comb12_0_decreasing.lp  Comb12_0_down_quadratic.lp  Comb12_0_increasing.lp  Comb12_0_up_quadratic.lp  Comb12_2_decreasing.lp  Comb12_2_down_quadratic.lp  Comb12_2_increasing.lp  Comb12_2_up_quadratic.lp  Comb1_0_decreasing.lp  Comb1_0_down_quadratic.lp  Comb1_0_increasing.lp  Comb1_0_up_quadratic.lp  (+69 more)
notebooks/: multi_knapsack_analysis.ipynb  prosumer_problem_analysis.ipynb
results/: mks_rnd.csv  multi_knapsack.csv  pp_extrapolation.csv  tae.csv  tae_standard.csv
(+7 files in other folders)
